--- a/Py/requirements.txt
+++ b/Py/requirements.txt
@@ -1,27 +1,40 @@
+appdirs>=1.4.4
+attrs>=19.3.0
+black>=19.10b0
 blinker>=1.4
 brotlipy>=0.7.0
-certifi>=2020.4.5.2
+certifi>=2020.6.20
 cffi>=1.14.0
 chardet>=3.0.4
 click>=7.1.2
 decorator>=4.4.2
 Deprecated>=1.2.10
+flake8>=3.8.3
 Flask>=1.1.2
 httpbin>=0.7.0
 idna>=2.9
+importlib-metadata>=1.6.1
 itsdangerous>=1.1.0
 Jinja2>=2.11.2
 MarkupSafe>=1.1.1
+mccabe>=0.6.1
+pathspec>=0.8.0
+pycodestyle>=2.6.0
 pycparser>=2.20
+pyflakes>=2.2.0
 PyGithub>=1.51
 PyJWT>=1.7.1
 PyQt5>=5.15.0
 PyQt5-sip>=12.8.0
 PySide2>=5.15.0
 raven>=6.10.0
-requests>=2.23.0
+regex>=2020.6.8
+requests>=2.24.0
 shiboken2>=5.15.0
 six>=1.15.0
+toml>=0.10.1
+typed-ast>=1.4.1
 urllib3>=1.25.9
 Werkzeug>=1.0.1
 wrapt>=1.12.1
+zipp>=3.1.0
