update logo in header and footer

--- a/react/package.json
+++ b/react/package.json
@@ -38,6 +38,9 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jquery": "^3.5.1",
+    "jquery-serializejson": "^2.9.0",
+    "jsdom": "^16.2.2",
     "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.6.4",
@@ -58,7 +61,7 @@
     "semver": "6.3.0",
     "style-loader": "0.23.1",
     "tabulator": "^0.2.40",
-    "tabulator-tables": "^4.6.3",
+    "tabulator-tables": "^4.7.1",
     "terser-webpack-plugin": "2.3.5",
     "ts-pnp": "1.1.6",
     "url-loader": "2.3.0",
