--- a/react/package.json
+++ b/react/package.json
@@ -19,6 +19,7 @@
     "babel-preset-react-app": "^9.1.2",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "components": "^0.1.0",
     "css-loader": "3.4.2",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -54,6 +55,7 @@
     "react-collapsing-table": "^1.0.3",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-tabulator": "^0.12.7",
     "rename": "^1.0.4",
     "resolve": "1.15.0",
@@ -61,6 +63,8 @@
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
     "style-loader": "0.23.1",
+    "styled": "^1.0.0",
+    "styled-components": "^5.2.1",
     "tabulator": "^0.2.40",
     "tabulator-tables": "^4.7.1",
     "terser-webpack-plugin": "2.3.5",
