--- a/react/package.json
+++ b/react/package.json
@@ -5,6 +5,8 @@
   "homepage": "/static/react",
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/styles": "^4.11.2",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
