--- a/react/package.json
+++ b/react/package.json
@@ -56,6 +56,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-collapsing-table": "^1.0.3",
     "react-dev-utils": "^10.2.1",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-tabulator": "^0.12.7",
