--- a/react/package.json
+++ b/react/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "d3-fetch": "^2.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
@@ -34,7 +35,6 @@
       "not dead",
       "not op_mini all"
     ],
-    "proxy": "http://localhost:3000/",
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
@@ -43,5 +43,6 @@
   },
   "devDependencies": {
     "prettier": "2.2.1"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
