--- a/react/package.json
+++ b/react/package.json
@@ -8,12 +8,14 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "d3-fetch": "^2.0.0",
+    "file-save": "^0.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
     "react-table": "^7.6.3",
+    "save-file": "^2.3.1",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
