--- a/react/package.json
+++ b/react/package.json
@@ -10,6 +10,7 @@
     "d3-fetch": "^2.0.0",
     "file-save": "^0.2.0",
     "react": "^17.0.1",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
     "react-router-dom": "^5.2.0",
