--- a/react/package.json
+++ b/react/package.json
@@ -11,6 +11,7 @@
     "file-save": "^0.2.0",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
+    "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.1",
     "react-grid-layout": "^1.2.0",
     "react-router-dom": "^5.2.0",
